crates/stc_ts_file_analyzer/tests/errors/conformance/types/intersection/andUnionTypes/2.ts
interface A {
  a: string;
}
interface B {
  b: string;
}

var a: A;
var b: B;
var anb: A & B;

anb = b;
